--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,16 @@
         <artifactId>h2</artifactId>
         <scope>runtime</scope>
     </dependency>
+
                         <dependency>
                             <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-starter-test</artifactId>
                             <scope>test</scope>
                         </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
                 </dependencies>
                     <properties>
                 <!--        <maven.compiler.source>17</maven.compiler.source>-->
